--- a/v2/main.css
+++ b/v2/main.css
@@ -23,7 +23,7 @@ body{
 	color: white;
 }
 
-a{
+a {
 	text-decoration: none;
 	color: white;
 }
@@ -289,6 +289,7 @@ a{
 
 .social-icon{
 	width: 32px;
+	filter: invert();
 }
 
 #footer-bottom{
@@ -321,6 +322,10 @@ input{
 	align-items: center;
 	justify-content: center;
 	margin-left: auto;
+}
+
+.form-button a{
+	color:  #23408e;
 }
 
 
